# mkgitbranch

./: .gitignore  README.md  mkgitbranch_config.sample.toml  mkgitbranch_config.toml  mkgitbranch_config.toml.off  pyproject.toml
src/mkgitbranch/: __init__.py  __main__.py  config.py  git_utils.py  gui.py
src/mkgitbranch/resources/: words.txt
tests/: test_config.py  test_git_utils.py  test_gui.py
