[project]
name = "mkgitbranch"
version = "0.1.0"
description = "Cross-platform GUI tool for generating conventional git branch names."
authors = [
    { name = "Justin Matlock", email = "xtex404@gmail.com" }
    ]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "PySide6>=6.7.0",
]

[tool.ruff]
line-length = 110

[tool.mypy]
python_version = "3.13"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-import-order>=0.19.2",
    "isort>=6.0.1",
    "ruff>=0.12.0",
]
