[project]
name = "mkgitbranch"
version = "0.1.0"
description = "Cross-platform GUI tool for generating conventional git branch names."
authors = [
    { name = "Justin Matlock", email = "xtex404@gmail.com" }
    ]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mkgitbranch"]

[tool.hatch.build.targets.sdist]
include = ["src/mkgitbranch", "README.md", "mkgitbranch_config.sample.toml"]

[tool.hatch.envs.default]
dependencies = [
    "loguru>=0.7.3",
    "PySide6>=6.7.0",
]

[tool.hatch.envs.dev]
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-import-order>=0.19.2",
    "isort>=6.0.1",
    "ruff>=0.12.0",
    "pytest>=7.0.0",
]

[project.scripts]
mkgitbranch = "mkgitbranch.gui:run_app"

[tool.hatch.envs.pyinstaller]
dependencies = ["pyinstaller>=6.0.0"]

[tool.hatch.envs.windows]
platforms = ["win32", "win_amd64"]

[tool.hatch.envs.macos]
platforms = ["macosx"]

[tool.ruff]
line-length = 110

[tool.mypy]
python_version = "3.13"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "flake8-import-order>=0.19.2",
    "isort>=6.0.1",
    "ruff>=0.12.0",
]


[tool.mkgitbranch]

username = "justin"
username_readonly = false
jira_prefix = "IAS-"
timeout_minutes = 10
cursor_start = "description"
branch_create_command_template = 'git switch --quiet --create --track "{branch_name}"'
allow_dirty = false


[tool.mkgitbranch.regex]
# Regular expression for validating the username field.
username = "^[a-zA-Z0-9_-]{2,7}$"
# Regular expression for allowed branch types.
type = "^(feat|fix|chore|test|refactor|hotfix)$"
# Regular expression for JIRA issue keys (e.g., ABC-123).
jira = "^[A-Z]{2,6}-[1-9][0-9]{,4}$"
# Regular expression for the description field.
description = "^[a-z][a-z0-9-]{,30}$"
